--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,1 +1,267 @@
+---
+test-cases:
+  - summary: |
+      Проверка поиска товара по корректному ключевому слову "Iphone"
+    status: pass
 
+  - summary: |
+      Проверка поиска товара по корректному ключевому слову на любой странице каталога
+    status: fail    
+
+  - summary: |
+      Поиск товара по некорректному ключевому слову "123"
+    status: fail
+
+  - summary: |
+      Проверка поиска товара по категории "smartphones"
+    status: pass
+
+- summary: |
+    Проверка поиска товара по категории "laptops"
+  status: pass
+
+- summary: |
+    Проверка поиска товара по категории "fragrances"
+  status: pass
+
+- summary: |
+    Проверка поиска товара по категории "skincare" 
+  status: pass
+
+- summary: |
+    Проверка поиска товара по категории "groceries"
+  status: pass
+
+- summary: |
+    Проверка поиска товара по категории "home-decoration"
+  status: pass
+
+- summary: |
+    Проверка фильтрации товаров по производителю
+  status: pass
+  
+- summary: |
+    Проверка фильтрации товаров по отсутствию фильтра производителя  
+  status: pass
+
+- summary: |
+    Проверка фильтрации товаров по множеству производителей 
+  status: pass
+
+- summary: |
+    Проверка фильтрации товаров по корректной категории и корректному производителю
+  status: pass
+
+- summary: |
+    Проверка фильтрации товаров по некорректной категории и корректному производителю
+  status: fail
+  
+- summary: |
+    Проверка фильтрации товаров по отрицательной цене
+  status: fail
+
+- summary: |
+    Проверка фильтрации товаров по нулевой цене 
+  status: fail
+
+- summary: |
+    Проверка фильтрации товаров по релевантной цене
+  status: pass
+
+- summary: |
+    Проверка фильтрации товаров по граничным значениям цены
+  status: pass
+
+- summary: |
+    Проверка фильтрации товаров по цене превышающей допустимое значение
+  status: fail
+
+- summary: |
+    Проверка фильтрации товаров по пустым значениям цены
+  status: pass
+
+- summary: |
+    Проверка фильтрации товаров по цене со скидкой
+  status: fail
+
+- summary: |
+    Проверка фильтрации товаров по цене без скидки
+  status: fail
+
+- summary: |
+    Проверка фильтрация товаров по отмеченому чекбоксу "В наличии"
+  status: pass
+
+- summary: |
+    Проверка фильтрация товаров по отсутствию отметки "В наличии"
+  status: fail
+
+- summary: |
+    Проверка фильтрация товаров по производителю, цене и наличию  
+  status: pass
+
+- summary: |
+    Проверка наличия мобильной версии сайта
+  status: pass
+
+- summary: |
+    Проверка просмотра товаров на странице каталога  
+  status: pass
+
+- summary: |
+    Проверка просмотра подробной информации товара на странице товара
+  status: pass
+
+- summary: |
+    Проверка просмотра подробной информации товара в каталоге  
+  status: fail
+
+- summary: |
+    Проверка добавления товаров в корзину через страницу товара  
+  status: pass
+
+- summary: |
+    Проверка добавления товаров в корзину через каталог  
+  status: pass
+
+- summary: |
+    Проверка удаления товара из корзины   
+  status: pass
+
+- summary: |
+    Проверка очистки корзины 
+  status: fail
+
+- summary: |
+    Проверка возможности продолжить совершать покупки на странице корзины  
+  status: pass
+
+- summary: |
+    Проверка оформления заказа с переходом на страницу оплаты
+  status: fail
+
+- summary: |
+    Проверка изменения информации о количестве единиц товара после оформления заказа
+  status: fail
+
+- summary: |
+    Проверка отправки запроса на сервер с ответом при оформлении заказа
+  status: fail
+
+- summary: |
+    Проверка корзины в сессии браузера
+  status: pass
+
+- summary: |
+    Проверка работы кнопки "Магазин"
+  status: pass
+  
+- summary: |
+    Проверка англо-русского перевода на сайте
+  status: fail
+
+- summary: |
+    Проверка русско-английского перевода на сайте
+  status: pass    
+
+bugreports:
+  - summary: |
+      Отсутствует отображение ошибки при вводе некорректных данных в поле поиска
+    environment: |
+      Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+      macOS Ventura 13.4.1 (c)
+      version 2
+    steps-to-reproduce: |
+      - Открыть раздел "Магазин"
+      - В поле поиска ввести некорректное ключевое слово "123"
+    expected-result: |
+      В результате поиска отображается сообщение "Ничего не найдено!"
+    actual-result: |
+      В результате поиска отображается каталог с товарами. Поле поиска не работает
+
+  - summary: |
+      Отсутствует отображение ошибки при фильтрации по некорректной категории и корректному производителю
+    environment: |
+      Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+      macOS Ventura 13.4.1 (c)
+      version 2
+    steps-to-reproduce: |
+      - В разделе "Категория" выбрать "fragrances"
+      - В разделе "Производитель" выбрать чекбокс "Apple"
+    expected-result: |
+      В результате фильтрации отображается сообщение "Ничего не найдено!"
+    actual-result: |
+      В результате фильтрации отображается каталог с товарами. Фильтр не работает  
+
+  - summary: |
+      Отсутствует отображение ошибки при вводе в фильтр отрицательных значений цены 
+    environment: |
+      Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+      macOS Ventura 13.4.1 (c)
+      version 2
+    steps-to-reproduce: |
+      - В разделе "Цена" в значении "от" указать "-1"
+      - В разделе "Цена" в значении "до" указать "0"
+    expected-result: |
+      В результате фильтрации отображается сообщение "Ничего не найдено!"
+    actual-result: |
+      В результате фильтрации отображается каталог с товарами. Фильтр не работает
+
+  - summary: |
+      Отсутствует отображение ошибки при вводе в фильтр нулевых значений цены 
+    environment: |
+      Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+      macOS Ventura 13.4.1 (c)
+      version 2
+    steps-to-reproduce: |
+      - В разделе "Цена" в значении "от" указать "0"
+      - В разделе "Цена" в значении "до" указать "0"
+    expected-result: |
+      В результате фильтрации отображается сообщение "Ничего не найдено!"
+    actual-result: |
+      В результате фильтрации отображается каталог с товарами. Фильтр не работает
+
+  - summary: |
+      Отсутствует отображение ошибки при вводе в фильтр цену превышающую допустимые значения 
+    environment: |
+      Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+      macOS Ventura 13.4.1 (c)
+      version 2
+    steps-to-reproduce: |
+      - В разделе "Цена" в значении "от" указать "11190"
+      - В разделе "Цена" в значении "до" указать "11191"
+    expected-result: |
+      В результате фильтрации отображается сообщение "Ничего не найдено!"
+    actual-result: |
+      В результате фильтрации отображается каталог с товарами. Фильтр не работает
+
+  - summary: |
+      При отсутствии отметки в чекбоксе "В наличии" отображаются товары которых нет в наличии
+    environment: |
+      Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+      macOS Ventura 13.4.1 (c)
+      version 2
+    steps-to-reproduce: |
+      - В разделе фильтрации убрать галочку из чекбокса "В наличии"
+    expected-result: |
+      В результате фильтрации отображаются товары которых нет в наличии
+    actual-result: |
+      В результате фильтрации отображается каталог с товарами. Фильтр не работает
+
+  - summary: |
+      Не работает кнопка "Очистить корзину"
+    environment: |
+      Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+      macOS Ventura 13.4.1 (c)
+      version 2
+    steps-to-reproduce: |
+      - В разделе магазин добавить товар "Iphone 9" в корзину
+      - Открыть корзину 
+      - Очистить корзину нажав "Очистить корзину"
+      - Перейти в раздел "Магазин"
+      - Убедиться что раздел "Корзина" пуст и нет отображения количества добавленных товаров
+      - Открыть и проверить карзину    
+    expected-result: |
+      Корзина пуста. Товары удалены и не отображаются в корзине
+    actual-result: |
+      Товары не удалены и отображаются в корзине
