--- a/test-cases.yml
+++ b/test-cases.yml
@@ -410,7 +410,10 @@
     Открыт раздел "Корзина" с добавленными товарами "Iphone 9" и "Iphone X"
   test-data: |
   steps:
-    - Удалить товар "Iphone" из корзины нажав "Удалить"
+    - Удалить товар "Iphone 9" из корзины нажав "Удалить"
+    - Перейти в раздел "Магазин"
+    - Убедиться что в разделе "Корзина" отображается значение "1"
+    - Открыть и проверить карзину
   expected-result: |
     Товар удален и не отображается в разделе "Корзина"
 
@@ -423,6 +426,9 @@
   test-data: |
   steps:
     - Очистить корзину нажав "Очистить корзину"
+    - Перейти в раздел "Магазин"
+    - Убедиться что раздел "Корзина" пуст и нет отображения количества добавленных товаров
+    - Открыть и проверить карзину
   expected-result: |
     Корзина пуста. Добавленные товары удалены и не отображаются
 
@@ -492,6 +498,20 @@
     - Проверить наличие сессии в Session storage
   expected-result: |
     Сохраняется корзина в сессии браузера
+
+- summary: |
+    Проверка работы кнопки "Магазин"
+  requirement: |
+    При нажатии кнопки "Магазин" сайт должен обновлять и открывать первую страницу каталога
+  prerequisites: |
+  test-data: |
+  steps:
+    - Открыть раздел "Магазин" 
+    - Проскролить сайт вниз
+    - Перейти на следующую страницу нажав "Следующая"
+    - На следующей странице нажать раздел "Магазин"
+  expected-result: |
+    Сайт обновляет страницу и открывает первую страницу каталога
 
 - summary: |
     Проверка англо-русского перевода на сайте
