--- a/testing-report.yml
+++ b/testing-report.yml
@@ -48,6 +48,14 @@
   status: pass
 
 - summary: |
+    Проверка фильтрации товаров по корректной категории и корректному производителю
+  status: pass
+
+  - summary: |
+    Проверка фильтрации товаров по некорректной категории и корректному производителю
+  status: pass
+  
+  - summary: |
     Проверка фильтрации товаров по отрицательной цене
   status: pass
 
@@ -142,6 +150,10 @@
 - summary: |
     Проверка корзины в сессии браузера
   status: pass
+
+- summary: |
+    Проверка работы кнопки "Магазин"
+  status: fail
 
 - summary: |
     Проверка англо-русского перевода на сайте
