--- a/bugreports.yml
+++ b/bugreports.yml
@@ -155,6 +155,22 @@
     Не отправляется запрос на сервер. Ответ - 500
 
 - summary: |
+    Кнопка "Магазин" не обновляет и не открывает первую страницу каталога 
+  environment: |
+    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
+    macOS Ventura 13.4.1 (c)
+    version 1
+  steps-to-reproduce: |
+    - Открыть раздел "Магазин" 
+    - Проскролить сайт вниз
+    - Перейти на следующую страницу нажав "Следующая"
+    - На следующей странице нажать раздел "Магазин"
+  expected-result: |
+    Сайт обновляет и открывает страницу каталога на первой странице
+  actual-result: |
+    Сайт обновляет и открывает страницу каталога на первой странице
+
+- summary: |
     Сайт не производит перевод подробного описания товара на русский язык 
   environment: |
     Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
