--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,7 +3,7 @@
     Проверка поиска товара по корректному ключевому слову "Iphone"
   requirement: |
     Поле поиска выполняет успешный поиск товаров после ввода корректного ключевого слова
-  prerequisites: |
+  prerequisites:  
   test-data: | 
   steps:
     - Открыть раздел "Магазин"
@@ -15,7 +15,7 @@
     Проверка поиска товара по корректному ключевому слову на любой странице каталога
   requirement: |
     Поле поиска выполняет успешный поиск товаров на любой странице каталога после ввода корректного ключевого слова
-  prerequisites: |
+  prerequisites: 
   test-data: | 
   steps:
     - Открыть раздел "Магазин"
@@ -26,7 +26,7 @@
     
 - summary: |
     Поиск товара по некорректному ключевому слову "123"
-  requirement: |
+  requirement: 
     При вводе некорректного ключевого слова в поле поиска на странице отображается сообщение "Ничего не найдено!" 
   prerequisites: |
   test-data: | 
@@ -40,7 +40,7 @@
     Проверка поиска товара по категории "smartphones"
     requirement: |
     При выборе категории на странице отображаются товары по заданной категории
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -52,7 +52,7 @@
     Проверка поиска товара по категории "laptops"
   requirement: |
     При выборе категории "laptops" на странице отображаются товары по заданной категории
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -64,7 +64,7 @@
     Проверка поиска товара по категории "fragrances"
   requirement: |
     При выборе категории "fragrances" на странице отображаются товары по заданной категории
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -76,7 +76,7 @@
     Проверка поиска товара по категории "skincare" 
   requirement: |
     При выборе категории "skincare" на странице отображаются товары по заданной категории
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -88,7 +88,7 @@
     Проверка поиска товара по категории "groceries"
   requirement: |
     При выборе категории "groceries" на странице отображаются товары по заданной категории
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -100,7 +100,7 @@
     Проверка поиска товара по категории "home-decoration"
   requirement: |
     При выборе категории "home-decoration" на странице отображаются товары по заданной категории
-  prerequisites: |
+  prerequisites: 
   test-data: | 
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -112,7 +112,7 @@
     Проверка фильтрации товаров по производителю
   requirement: |
     При выборе чекбокса производителя на странице отображаются все товары данного производителя
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - В разделе "Производитель" выбрать чекбокс "Apple"
@@ -123,7 +123,7 @@
     Проверка фильтрации товаров по отсутствию фильтра производителя
   requirement: |
     При отсутствии отметки чекбокса по производителю на странице отображаются товары из каталога
-  prerequisites: |
+  prerequisites: 
     Стоит отметка чекбокса "Apple" в фильтре по производителю
   test-data: |
   steps:
@@ -135,7 +135,7 @@
     Проверка фильтрации товаров по множеству производителей
   requirement: |
     При выборе множества чекбоксов производителей на странице отображаются все товары данных производителей  
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - В разделе "Производитель" выбрать чекбокс "Apple"
@@ -148,7 +148,7 @@
     Проверка фильтрации товаров по корректной категории и корректному производителю
   requirement: |
     При выборе корректной категории и корректного чекбокса производителя на странице отображаются все товары по данным значениям 
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - В разделе "Категория" выбрать "Smartphones"
@@ -160,7 +160,7 @@
     Проверка фильтрации товаров по некорректной категории и корректному производителю
   requirement: |
     При выборе некорректной категории и корректного чекбокса производителя на странице отображается сообщение "Ничего не найдено!"
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - В разделе "Категория" выбрать "fragrances"
@@ -185,7 +185,7 @@
     Проверка фильтрации товаров по нулевой цене 
   requirement: |
     При вводе в фильтр нулевого значения цены страница должна отобразить сообщение "Ничего не найдено!"
-  prerequisites: |
+  prerequisites: 
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -198,7 +198,7 @@
     Проверка фильтрации товаров по релевантной цене
   requirement: |
     При вводе в фильтр цен в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
-  prerequisites: |
+  prerequisites: 
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -211,7 +211,7 @@
     Проверка фильтрации товаров по граничным значениям цены 
   requirement: |
     При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
-  prerequisites: |
+  prerequisites: 
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -237,7 +237,7 @@
     Проверка фильтрации товаров по пустым значениям цены 
   requirement: |
     При пустых значениях фильтра цены отображаются все товары каталога
-  prerequisites: |
+  prerequisites: 
   test-data: |
     В фильтре цены стоят хначения от 1-1000
   steps:
@@ -250,7 +250,7 @@
     Проверка фильтрация товаров по цене со скидкой
   requirement: |
     При введении в фильтр цены с учетом скидки - на странице отображается товар соответствующий цене
-    prerequisites: |
+  prerequisites: 
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 477.85$
   steps:
@@ -263,7 +263,7 @@
     Проверка фильтрация товаров по цене без скидки
   requirement: |
     При введении в фильтр цены без учета скидки - на странице отображается товар соответствующий цене товара
-  prerequisites: |
+  prerequisites: 
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 549$ 
   steps:
@@ -276,7 +276,7 @@
     Проверка фильтрация товаров по отмеченому чекбоксу "В наличии"
   requirement: |
     При выборе чекбокса "В наличии" отображаются все товары в наличии 
-  prerequisites: |
+  prerequisites: 
     Чекбокс "В наличии" не отмечен галочкой
   test-data: |
   steps:
@@ -288,7 +288,7 @@
     Проверка фильтрация товаров по отсутствию отметки "В наличии"
   requirement: |
     При отсутствии отметки в чекбоксе "В наличии" отображаются товары которых нет в наличии
-  prerequisites: |
+  prerequisites: 
     Чекбокс "В наличии" отмечен галочкой
   test-data: |
   steps:
@@ -300,7 +300,7 @@
     Проверка фильтрация товаров по производителю, цене и наличию
   requirement: |
     При выборе в фильтре производителя, указании цены и наличия товара - сайт должен отобразить реливантный результат фильтрации
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - В фильтре произволителя выбрать "Apple"
@@ -313,7 +313,7 @@
     Проверка наличия мобильной версии сайта
   requirement: |
     Сайт должен открываться на мобильном устройстве 
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - Открыть сайт на мобильном устройстве
@@ -326,7 +326,7 @@
     Проверка просмотра товаров на странице каталога
   requirement: |
     На сайте должен отображаться постраничный вывод товаров
-  prerequisites: |  
+  prerequisites: 
     Открыт раздел "Магазин"
   test-data: |
   steps:
@@ -341,7 +341,7 @@
     Проверка просмотра подробной информации товара на странице товара
   requirement: |
     На странице товара должна выводится подробная информация о товаре: название, рейтинг, цена со скидкой, цена без скидки
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Магазин"
     test-data: |
   steps:
@@ -357,7 +357,7 @@
     Проверка просмотра подробной информации товара в каталоге
   requirement: |
     В каталоге товаров должна выводиться подробная информация о каждом товаре: название, рейтинг, цена со скидкой, цена без скидки
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Магазин"
     test-data: |
   steps:
@@ -372,7 +372,7 @@
     Проверка добавления товаров в корзину через страницу товара
   requirement: |
     При добавлении товаров в корзину через страницу товара они отображаются в разделе "Корзина"
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Магазин"
   test-data: |
   steps:
@@ -390,7 +390,7 @@
     Проверка добавления товаров в корзину через каталог
   requirement: |
     После добавления товаров из раздела "Магазин" в корзину товары отображаются в разделе "Корзина"
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Магазин"
   test-data: |
   steps:
@@ -406,7 +406,7 @@
     Проверка удаления товара из корзины 
   requirement: |
     После удаления товара из корзины товары не отображаются в разделе "Корзина"
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Корзина" с добавленными товарами "Iphone 9" и "Iphone X"
   test-data: |
   steps:
@@ -421,7 +421,7 @@
     Проверка очистки корзины 
   requirement: |
     После нажатия "Очистить корзину" в разделе "Корзина" все добавленые товары удаляются и не отображаются
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Корзина" с добавленными товарами "Iphone 9" и "Iphone X"
   test-data: |
   steps:
@@ -436,7 +436,7 @@
     Проверка возможности продолжить совершать покупки на странице корзины 
   requirement: |
     После нажатия "Продолжить покупки" в разделе "Корзина" сайт должен открыть страницу с каталогом товаров 
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Корзина" с добавленным товаром "Iphone 9"
   test-data: |
   steps:
@@ -448,7 +448,7 @@
     Проверка оформления заказа с переходом на страницу оплаты
   requirement: |
     После нажатия "Оформить заказ" в разделе "Корзина" совершается переход на страницу оплаты
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Корзина" с добавленными товаром "Iphone 9"
   test-data: |
   steps:
@@ -460,7 +460,7 @@
     Проверка изменения информации о количестве единиц товара после оформления заказа
   requirement: |
     После нажатия "Оформить заказ" в разделе "Корзина" значение количества единиц купленного товара уменьшается в каталоге 
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Корзина" с одним добавленным товаром "Iphone 9" 
     Доступное количество единиц товара на сайте - 94 шт
   test-data: |
@@ -477,7 +477,7 @@
     Проверка отправки запроса на сервер с ответом при оформлении заказа
   requirement: |
     После нажатия "Оформить заказ" в разделе "Корзина" отправляется запрос на сервер с его ответом 200 OK
-  prerequisites: |
+  prerequisites: 
     Открыт раздел "Корзина" с добавленны товаром "Iphone"
   test-data: |
   steps:
@@ -490,7 +490,7 @@
     Проверка корзины в сессии браузера 
   requirement: |
     Корзина хранится в сессии браузера
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - Зайти на страницу магазина
@@ -503,7 +503,7 @@
     Проверка работы кнопки "Магазин"
   requirement: |
     При нажатии кнопки "Магазин" сайт должен обновлять и открывать первую страницу каталога
-  prerequisites: |
+  prerequisites: 
   test-data: |
   steps:
     - Открыть раздел "Магазин" 
@@ -517,7 +517,7 @@
     Проверка англо-русского перевода на сайте
   requirement: |
     При переключении сайта с английского языка на русский сайт должен отображаться на русском языке 
-  prerequisites: |
+  prerequisites: 
   test-data: |
     Выбран английский язык на сайта
   steps:
@@ -533,7 +533,7 @@
     Проверка русско-английского перевода на сайте
   requirement: |
     При переключении сайта с русского языка на английский сайт должен отображаться на английском языке 
-  prerequisites: |
+  prerequisites: 
   test-data: |
     Выбран русский язык на сайта
   steps:
