--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,7 +3,7 @@
     Проверка поиска товара по корректному ключевому слову "Iphone"
   requirement: |
     Поле поиска выполняет успешный поиск товаров после ввода корректного ключевого слова
-  prerequisites:  
+  prerequisites: | 
   test-data: | 
   steps:
     - Открыть раздел "Магазин"
@@ -15,7 +15,7 @@
     Проверка поиска товара по корректному ключевому слову на любой странице каталога
   requirement: |
     Поле поиска выполняет успешный поиск товаров на любой странице каталога после ввода корректного ключевого слова
-  prerequisites: 
+  prerequisites: |
   test-data: | 
   steps:
     - Открыть раздел "Магазин"
@@ -40,7 +40,7 @@
     Проверка поиска товара по категории "smartphones"
   requirement: |
     При выборе категории на странице отображаются товары по заданной категории
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -52,7 +52,7 @@
     Проверка поиска товара по категории "laptops"
   requirement: |
     При выборе категории "laptops" на странице отображаются товары по заданной категории
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -64,7 +64,7 @@
     Проверка поиска товара по категории "fragrances"
   requirement: |
     При выборе категории "fragrances" на странице отображаются товары по заданной категории
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -76,7 +76,7 @@
     Проверка поиска товара по категории "skincare" 
   requirement: |
     При выборе категории "skincare" на странице отображаются товары по заданной категории
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -88,7 +88,7 @@
     Проверка поиска товара по категории "groceries"
   requirement: |
     При выборе категории "groceries" на странице отображаются товары по заданной категории
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -100,7 +100,7 @@
     Проверка поиска товара по категории "home-decoration"
   requirement: |
     При выборе категории "home-decoration" на странице отображаются товары по заданной категории
-  prerequisites: 
+  prerequisites: |
   test-data: | 
   steps:
     - На странице магазина открыть вкладку "Категория"
@@ -112,7 +112,7 @@
     Проверка фильтрации товаров по производителю
   requirement: |
     При выборе чекбокса производителя на странице отображаются все товары данного производителя
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - В разделе "Производитель" выбрать чекбокс "Apple"
@@ -135,7 +135,7 @@
     Проверка фильтрации товаров по множеству производителей
   requirement: |
     При выборе множества чекбоксов производителей на странице отображаются все товары данных производителей  
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - В разделе "Производитель" выбрать чекбокс "Apple"
@@ -148,7 +148,7 @@
     Проверка фильтрации товаров по корректной категории и корректному производителю
   requirement: |
     При выборе корректной категории и корректного чекбокса производителя на странице отображаются все товары по данным значениям 
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - В разделе "Категория" выбрать "Smartphones"
@@ -160,7 +160,7 @@
     Проверка фильтрации товаров по некорректной категории и корректному производителю
   requirement: |
     При выборе некорректной категории и корректного чекбокса производителя на странице отображается сообщение "Ничего не найдено!"
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - В разделе "Категория" выбрать "fragrances"
@@ -185,7 +185,7 @@
     Проверка фильтрации товаров по нулевой цене 
   requirement: |
     При вводе в фильтр нулевого значения цены страница должна отобразить сообщение "Ничего не найдено!"
-  prerequisites: 
+  prerequisites: |
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -198,7 +198,7 @@
     Проверка фильтрации товаров по релевантной цене
   requirement: |
     При вводе в фильтр цен в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
-  prerequisites: 
+  prerequisites: |
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -211,7 +211,7 @@
     Проверка фильтрации товаров по граничным значениям цены 
   requirement: |
     При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
-  prerequisites: 
+  prerequisites: |
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -237,7 +237,7 @@
     Проверка фильтрации товаров по пустым значениям цены 
   requirement: |
     При пустых значениях фильтра цены отображаются все товары каталога
-  prerequisites: 
+  prerequisites: |
   test-data: |
     В фильтре цены стоят хначения от 1-1000
   steps:
@@ -250,7 +250,7 @@
     Проверка фильтрация товаров по цене со скидкой
   requirement: |
     При введении в фильтр цены с учетом скидки - на странице отображается товар соответствующий цене
-  prerequisites: 
+  prerequisites: |
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 477.85$
   steps:
@@ -263,7 +263,7 @@
     Проверка фильтрация товаров по цене без скидки
   requirement: |
     При введении в фильтр цены без учета скидки - на странице отображается товар соответствующий цене товара
-  prerequisites: 
+  prerequisites: |
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 549$ 
   steps:
@@ -300,7 +300,7 @@
     Проверка фильтрация товаров по производителю, цене и наличию
   requirement: |
     При выборе в фильтре производителя, указании цены и наличия товара - сайт должен отобразить реливантный результат фильтрации
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - В фильтре произволителя выбрать "Apple"
@@ -313,7 +313,7 @@
     Проверка наличия мобильной версии сайта
   requirement: |
     Сайт должен открываться на мобильном устройстве 
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - Открыть сайт на мобильном устройстве
@@ -462,8 +462,8 @@
     После нажатия "Оформить заказ" в разделе "Корзина" значение количества единиц купленного товара уменьшается в каталоге 
   prerequisites: 
     Открыт раздел "Корзина" с одним добавленным товаром "Iphone 9" 
-    Доступное количество единиц товара на сайте - 94 шт
   test-data: |
+    Доступное количество единиц товара на сайте - 94 шт
   steps:
     - Оформить заказ нажав "Оформить заказ"
     - Нажать "Закрыть" в модальном окне об успешном оформлении заказа 
@@ -490,7 +490,7 @@
     Проверка корзины в сессии браузера 
   requirement: |
     Корзина хранится в сессии браузера
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - Зайти на страницу магазина
@@ -503,7 +503,7 @@
     Проверка работы кнопки "Магазин"
   requirement: |
     При нажатии кнопки "Магазин" сайт должен обновлять и открывать первую страницу каталога
-  prerequisites: 
+  prerequisites: |
   test-data: |
   steps:
     - Открыть раздел "Магазин" 
@@ -517,7 +517,7 @@
     Проверка англо-русского перевода на сайте
   requirement: |
     При переключении сайта с английского языка на русский сайт должен отображаться на русском языке 
-  prerequisites: 
+  prerequisites: |
   test-data: |
     Выбран английский язык на сайта
   steps:
@@ -533,7 +533,7 @@
     Проверка русско-английского перевода на сайте
   requirement: |
     При переключении сайта с русского языка на английский сайт должен отображаться на английском языке 
-  prerequisites: 
+  prerequisites: |
   test-data: |
     Выбран русский язык на сайта
   steps:
