--- a/test-cases.yml
+++ b/test-cases.yml
@@ -9,7 +9,7 @@
     - Открыть раздел "Магазин"
     - В поле поиска ввести ключевое слово "Iphone"
   expected-result: |
-    На странице отображается реливантный результат поиска по ключевому слову
+    На странице отображается релевантный результат поиска по ключевому слову
 
 - summary: |
     Проверка поиска товара по корректному ключевому слову на любой странице каталога
@@ -22,7 +22,7 @@
     - Перейти на следующую страницу каталога нажав "Следующая"
     - В поле поиска ввести ключевое слово "Iphone"
   expected-result: |
-    На странице отображается реливантный результат поиска по ключевому слову
+    На странице отображается релевантный результат поиска по ключевому слову
     
 - summary: |
     Поиск товара по некорректному ключевому слову "123"
@@ -299,7 +299,7 @@
 - summary: |
     Проверка фильтрация товаров по производителю, цене и наличию
   requirement: |
-    При выборе в фильтре производителя, указании цены и наличия товара - сайт должен отобразить реливантный результат фильтрации
+    При выборе в фильтре производителя, указании цены и наличия товара - сайт должен отобразить релевантный результат фильтрации
   prerequisites: |
   test-data: |
   steps:
