--- a/bugreports.yml
+++ b/bugreports.yml
@@ -10,7 +10,7 @@
     - Перейти на следующую страницу каталога нажав "Следующая"
     - В поле поиска ввести ключевое слово "Iphone"
   expected-result: |
-    На странице отображается реливантный результат поиска по ключевому слову
+    На странице отображается релевантный результат поиска по ключевому слову
   actual-result: |
     На странице отображается сообщение "Ничего не найдено!"
 
@@ -85,22 +85,6 @@
   expected-result: |
     Корректное написание "Заказ успешно оформлен"
   actual-result: |
-    Некорректное написание "Заказ успешно формлен"
-
-- summary: |
-    Грамматическая ошибка в слове "оформлен" в модальном окне "Заказ успешно оформлен"
-  environment: |
-    Google Chrome 115.0.5790.114 (Официальная сборка) (arm64)    
-    macOS Ventura 13.4.1 (c)
-    version 1
-  steps-to-reproduce: |
-    - Открыть раздел "Магазин"
-    - Добавить товар "Iphone 9" в корзину
-    - В корзине оформить заказ нажав "Оформить заказ"
-    - Проверить модальное окно "Заказ успешно оформлен" на наличие грамматической ошибки
-  expected-result: |
-    Корректное написание "Заказ успешно оформлен"
-  actual-result: |
     Некорректное написание "Заказ успешно формлен
     
 - summary: |
@@ -115,7 +99,7 @@
     - В корзине оформить заказ нажав "Оформить заказ"
     - Нажать кнопку крестик "Закрыть" в модальном окне "Заказ успешно оформлен"
   expected-result: |
-    Модальное окно "Заказ успешно оформлен" закрывается 
+    Модальное окно "Заказ успешно оформлен" закрывается
   actual-result: |
     Модальное окно "Заказ успешно оформлен" не закрывается. Кнопка не работает
 
@@ -150,7 +134,7 @@
     - В корзине оформить заказ нажав "Оформить заказ"
     - Проверить отправку запроса c ответом сервера через DevTools
   expected-result: |
-    Отправляется запрос на сервер с ответом - 200 OK. Заказ оформлен.
+    Отправляется запрос на сервер с ответом - 200 OK.
   actual-result: |
     Не отправляется запрос на сервер. Ответ - 500
 
