--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,12 +3,11 @@
     Проверка поиска товара по корректному ключевому слову "Iphone"
   requirement: | 
     Поле поиска выполняет успешный поиск товаров после ввода корректного ключевого слова
-  prerequisites: | 
-    1
-  test-data: | 
-    1
+  prerequisites: |
+    Открыт раздел "Магазин"
+  test-data: |
+    Отсутствует
   steps:
-    - Открыть раздел "Магазин"
     - В поле поиска ввести ключевое слово "Iphone"
   expected-result: |
     На странице отображается релевантный результат поиска по ключевому слову
@@ -18,22 +17,24 @@
   requirement: |
     Поле поиска выполняет успешный поиск товаров на любой странице каталога после ввода корректного ключевого слова
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: | 
+    Отсутствует
   steps:
-    - Открыть раздел "Магазин"
     - Перейти на следующую страницу каталога нажав "Следующая"
     - В поле поиска ввести ключевое слово "Iphone"
   expected-result: |
-    На странице отображается релевантный результат поиска по ключевому слову
+    На странице отображается успешный результат поиска по ключевому слову
     
 - summary: |
     Поиск товара по некорректному ключевому слову "123"
   requirement: 
-    При вводе некорректного ключевого слова в поле поиска на странице отображается сообщение "Ничего не найдено!" 
+    При вводе некорректного ключевого слова в поле поиска на странице отображается сообщение "Ничего не найдено!"
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: | 
+    Отсутствует
   steps:
-    - Открыть раздел "Магазин"
     - В поле поиска ввести некорректное ключевое слово "123"
   expected-result: |
     В результате поиска отображается сообщение "Ничего не найдено!"
@@ -43,9 +44,11 @@
   requirement: |
     При выборе категории на странице отображаются товары по заданной категории
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
-    - На странице магазина открыть вкладку "Категория"
+    - Открыть вкладку "Категория"
     - Выбрать значение "smartphones"   
   expected-result: |
     Результат поиска отображает товары по заданной категории
@@ -55,9 +58,11 @@
   requirement: |
     При выборе категории "laptops" на странице отображаются товары по заданной категории
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
-    - На странице магазина открыть вкладку "Категория"
+    - Открыть вкладку "Категория"
     - Выбрать значение "laptops"   
   expected-result: |
     Результат поиска отображает товары по заданной категории
@@ -67,9 +72,11 @@
   requirement: |
     При выборе категории "fragrances" на странице отображаются товары по заданной категории
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
-    - На странице магазина открыть вкладку "Категория"
+    - Открыть вкладку "Категория"
     - Выбрать значение "fragrances"   
   expected-result: |
     Результат поиска отображает товары по заданной категории
@@ -79,9 +86,11 @@
   requirement: |
     При выборе категории "skincare" на странице отображаются товары по заданной категории
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
-    - На странице магазина открыть вкладку "Категория"
+    - Открыть вкладку "Категория"
     - Выбрать значение "skincare"   
   expected-result: |
     Результат поиска отображает товары по заданной категории
@@ -91,9 +100,11 @@
   requirement: |
     При выборе категории "groceries" на странице отображаются товары по заданной категории
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
-    - На странице магазина открыть вкладку "Категория"
+    - Открыть вкладку "Категория"
     - Выбрать значение "groceries"   
   expected-result: |
     Результат поиска отображает товары по заданной категории
@@ -103,9 +114,11 @@
   requirement: |
     При выборе категории "home-decoration" на странице отображаются товары по заданной категории
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: | 
+    Отсутствует
   steps:
-    - На странице магазина открыть вкладку "Категория"
+    - Открыть вкладку "Категория"
     - Выбрать значение "home-decoration"   
   expected-result: |
     Результат поиска отображает товары по заданной категории
@@ -115,11 +128,13 @@
   requirement: |
     При выборе чекбокса производителя на странице отображаются все товары данного производителя
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - В разделе "Производитель" выбрать чекбокс "Apple"
   expected-result: |
-    На странице отображаются товары выбранные в фильтре производителя
+    На странице отображаются товары данного производителя
 
 - summary: |
     Проверка фильтрации товаров по отсутствию фильтра производителя
@@ -128,6 +143,7 @@
   prerequisites: 
     Стоит отметка чекбокса "Apple" в фильтре по производителю
   test-data: |
+    Отсутствует
   steps:
     - Убрать отметку чекбокса "Apple" в фильтре по производителю 
   expected-result: |
@@ -138,20 +154,24 @@
   requirement: |
     При выборе множества чекбоксов производителей на странице отображаются все товары данных производителей  
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - В разделе "Производитель" выбрать чекбокс "Apple"
     - В разделе "Производитель" выбрать чекбокс "Lord - Al-Rehab"
     - В разделе "Производитель" выбрать чекбокс "Saaf & Khaas"
   expected-result: |
-    На странице отображаются все товары выбранные в фильтре производителя
+    На странице отображаются все товары данных производителей
 
 - summary: |
     Проверка фильтрации товаров по корректной категории и корректному производителю
   requirement: |
     При выборе корректной категории и корректного чекбокса производителя на странице отображаются все товары по данным значениям 
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - В разделе "Категория" выбрать "Smartphones"
     - В разделе "Производитель" выбрать чекбокс "Apple"
@@ -163,7 +183,9 @@
   requirement: |
     При выборе некорректной категории и корректного чекбокса производителя на странице отображается сообщение "Ничего не найдено!"
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - В разделе "Категория" выбрать "fragrances"
     - В разделе "Производитель" выбрать чекбокс "Apple"
@@ -175,6 +197,7 @@
   requirement: |
     При вводе в фильтр отрицательного значения цены страница должна отобразить сообщение "Ничего не найдено!"
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -188,6 +211,7 @@
   requirement: |
     При вводе в фильтр нулевого значения цены страница должна отобразить сообщение "Ничего не найдено!"
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -199,8 +223,9 @@
 - summary: |
     Проверка фильтрации товаров по релевантной цене
   requirement: |
-    При вводе в фильтр цен в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
+    При вводе в фильтр цен в диапозоне от 0 до 11190 осуществляется фильтрация товаров
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -212,8 +237,9 @@
 - summary: |
     Проверка фильтрации товаров по граничным значениям цены 
   requirement: |
-    При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров по соответствующему запросу
+    При вводе в фильтр цены значений в диапозоне от 0 до 11190 осуществляется фильтрация товаров
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
@@ -225,21 +251,23 @@
 - summary: |
     Проверка фильтрации товаров по цене превышающей допустимое значение
   requirement: |
-    При вводе в фильтр цены значений < 11190 отображается сообщение "Ничего не найдено!"
+    При вводе в фильтр цены значений < 11190 отображается сообщение "Ничего не найдено!"/"Nothing found!"
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
     Допустимое значение цены: 0 - 11190
   steps:
     - В разделе "Цена" в значении "от" указать "11190"
     - В разделе "Цена" в значении "до" указать "11191"
   expected-result: |
-    На странице интернет-магазина отображается сообщение "Ничего не найдено!"
+    На странице интернет-магазина отображается сообщение "Ничего не найдено!"/"Nothing found!"
 
 - summary: |
     Проверка фильтрации товаров по пустым значениям цены 
   requirement: |
     При пустых значениях фильтра цены отображаются все товары каталога
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
     В фильтре цены стоят хначения от 1-1000
   steps:
@@ -253,6 +281,7 @@
   requirement: |
     При введении в фильтр цены с учетом скидки - на странице отображается товар соответствующий цене
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 477.85$
   steps:
@@ -266,6 +295,7 @@
   requirement: |
     При введении в фильтр цены без учета скидки - на странице отображается товар соответствующий цене товара
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
     Значение цены конкретного товара для ввода в фильтр 549$ 
   steps:
@@ -281,6 +311,7 @@
   prerequisites: 
     Чекбокс "В наличии" не отмечен галочкой
   test-data: |
+    Отсутствует
   steps:
     - В разделе фильтрации выбрать чекбокс "В наличии"
   expected-result: |
@@ -293,6 +324,7 @@
   prerequisites: 
     Чекбокс "В наличии" отмечен галочкой
   test-data: |
+    Отсутствует
   steps:
     - В разделе фильтрации убрать галочку из чекбокса "В наличии"
   expected-result: |
@@ -303,7 +335,9 @@
   requirement: |
     При выборе в фильтре производителя, указании цены и наличия товара - сайт должен отобразить релевантный результат фильтрации
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - В фильтре произволителя выбрать "Apple"
     - В фильтре цены выбрать значение от 0 - 1000
@@ -316,9 +350,10 @@
   requirement: |
     Сайт должен открываться на мобильном устройстве 
   prerequisites: |
+    Открыть сайт на мобильном устройстве
   test-data: |
+    Отсутствует
   steps:
-    - Открыть сайт на мобильном устройстве
     - Проскролить сайт вниз
     - Перейти на следующую страницу каталога нажав кнопку "Следующая"
   expected-result: |
@@ -331,6 +366,7 @@
   prerequisites: 
     Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - Проверить отображение товаров в разделе "Магазин" 
     - Проскролить сайт вниз
@@ -346,6 +382,7 @@
   prerequisites: 
     Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - Открыть товар "iPhone 9"
     - Проверить наличие названия на странице
@@ -362,6 +399,7 @@
   prerequisites: 
     Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - Проверить наличие названия у товаров 
     - Проверить наличие рейтинга у товаров
@@ -377,8 +415,9 @@
   prerequisites: 
     Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
-    - Открыть страницу товара  "iPhone 9"
+    - Открыть страницу товара "iPhone 9"
     - Добавить товар в корзину нажав "В корзину"
     - Открыть корзину и проверить наличие добавленного товара
     - Вернуться в раздел "Магазин" нажав "Продолжить покупки"
@@ -395,6 +434,7 @@
   prerequisites: 
     Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - Добавить товар "iPhone 9" в корзину нажав "В корзину"
     - Открыть корзину и проверить наличие добавленного товара
@@ -411,6 +451,7 @@
   prerequisites: 
     Открыт раздел "Корзина" с добавленными товарами "Iphone 9" и "Iphone X"
   test-data: |
+    Отсутствует
   steps:
     - Удалить товар "Iphone 9" из корзины нажав "Удалить"
     - Перейти в раздел "Магазин"
@@ -426,6 +467,7 @@
   prerequisites: 
     Открыт раздел "Корзина" с добавленными товарами "Iphone 9" и "Iphone X"
   test-data: |
+    Отсутствует
   steps:
     - Очистить корзину нажав "Очистить корзину"
     - Перейти в раздел "Магазин"
@@ -441,6 +483,7 @@
   prerequisites: 
     Открыт раздел "Корзина" с добавленным товаром "Iphone 9"
   test-data: |
+    Отсутствует
   steps:
     - Перейти в каталог нажав "Продолжить покупки"
   expected-result: |
@@ -453,6 +496,7 @@
   prerequisites: 
     Открыт раздел "Корзина" с добавленными товаром "Iphone 9"
   test-data: |
+    Отсутствует
   steps:
     - Оформить заказ нажав "Оформить заказ"
   expected-result: |
@@ -480,22 +524,24 @@
   requirement: |
     После нажатия "Оформить заказ" в разделе "Корзина" отправляется запрос на сервер с его ответом 200 OK
   prerequisites: 
-    Открыт раздел "Корзина" с добавленны товаром "Iphone"
+    Открыт раздел "Корзина" с добавленны товаром "Iphone 9"
   test-data: |
+    Отсутствует
   steps:
     - Оформить заказ нажав "Оформить заказ"
     - Проверить отправку запроса c ответом сервера через DevTools
   expected-result: |
-    Отправляется запрос на сервер с ответом - 200 OK. Заказ оформлен.
+    Отправляется запрос на сервер с ответом - 200 OK.
 
 - summary: |
     Проверка корзины в сессии браузера 
   requirement: |
     Корзина хранится в сессии браузера
   prerequisites: |
+    Открыта страница магазина
   test-data: |
+    Отсутствует
   steps:
-    - Зайти на страницу магазина
     - Открыть инструменты разработчика
     - Проверить наличие сессии в Session storage
   expected-result: |
@@ -506,7 +552,9 @@
   requirement: |
     При нажатии кнопки "Магазин" сайт должен обновлять и открывать первую страницу каталога
   prerequisites: |
+    Открыт раздел "Магазин"
   test-data: |
+    Отсутствует
   steps:
     - Открыть раздел "Магазин" 
     - Проскролить сайт вниз
@@ -520,8 +568,9 @@
   requirement: |
     При переключении сайта с английского языка на русский сайт должен отображаться на русском языке 
   prerequisites: |
+    Выбран английский язык на сайте
   test-data: |
-    Выбран английский язык на сайта
+    Отсутствует
   steps:
     - На странице магазина нажать "Language"
     - Выбрать русский язык нажав "Russian"
@@ -536,8 +585,9 @@
   requirement: |
     При переключении сайта с русского языка на английский сайт должен отображаться на английском языке 
   prerequisites: |
+    Выбран русский язык на сайте
   test-data: |
-    Выбран русский язык на сайта
+    Отсутствует
   steps:
     - На странице магазина нажать "Язык"
     - Выбрать английский язык нажав "English"
