--- a/test-cases.yml
+++ b/test-cases.yml
@@ -596,3 +596,62 @@
     - На странице товара проверить наличие перевода описания товаре на английский язык
   expected-result: |
     Сайт корректно производит перевод на английский язык язык
+
+- summary: |
+    Проверка закрытия окна заказа через кнопку "Закрыть"
+  requirement: |
+    При нажатии кнопки "Закрыть" окно заказа закрывается
+  prerequisites: |
+    Открыт раздел "Корзина" с добавленным товаром 
+  test-data: |
+    Отсутствует
+  steps:
+    - Оформить заказ нажав "Оформить заказ"
+    - В окне заказа нажать кнопку "Закрыть"
+  expected-result: |
+    Окно заказа закрывается
+
+- summary: |
+    Проверка закрытия окна заказа через кнопку-крестик
+  requirement: |
+    При нажатии кнопки-крестика окно заказа закрывается
+  prerequisites: |
+    Открыт раздел "Корзина" с добавленным товаром 
+  test-data: |
+    Отсутствует
+  steps:
+    - Оформить заказ нажав "Оформить заказ"
+    - В окне заказа нажать кнопку-крестик
+  expected-result: |
+    Окно заказа закрывается
+
+- summary: |
+    Проверка перехода в раздел категории через хэштег на странице товара
+  requirement: |
+    При нажатии хэштега на странице товара должен осуществляться переход в категорию данного товара
+  prerequisites: |
+    Открыта страница магазина
+  test-data: |
+    Отсутствует
+  steps:
+    - Открыть товар из каталога
+    - На странице товара нажать на хэштег
+  expected-result: |
+    Открывается категория данного товара
+
+ - summary: |
+    Проверка перехода в раздел категории через хэштег на странице товара
+  requirement: |
+    При нажатии хэштега на странице товара должен осуществляться переход в категорию данного товара
+  prerequisites: |
+    Открыта страница магазина
+  test-data: |
+    Отсутствует
+  steps:
+    - Открыть товар из каталога
+    - На странице товара нажать на хэштег
+  expected-result: |
+    Открывается категория данного товара
+
+
+    
